2006-06-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j61-UNSTABLE

 * Fix: init_language() is not called redundant in init.php

 * Change: When user updates his language, the parent page is reloaded with the new language.

 * PHP5 fix:
   In classes/Mail/htmlMimeMail.php, ecard_form.php was $HTTP_SERVER_VARS used,
   which is not longer present in PHP5


 * Added svn IDs:
	js/sectionTabs.js.php
	js/wz_tooltip.js
	js/wz_jsgraphics.js
	js/imagemap.js
	js/toggle.js
	js/fitToWindow.js.php
	templates/setup/im-netpbm-test.tpl

2006-06-16 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j60-UNSTABLE

 * Translation in Setup fix.

2006-06-16 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j59-UNSTABLE

 * CSS nicify.

2006-06-16 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j58-UNSTABLE

 *** CHANGE ***

 * removed html_wrap folder !!! *

 * Moved frames into Layout

 * Moved general footer into templates.

 * Removed unneeded function includeHtmlWrap(); use of includeTemplate instead.

 * Adjustments to the above

2006-06-16 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j58-UNSTABLE

 * Fix: mod_rewrite was broken in b29

 * Fix: getTag was broken ib b37

2006-06-15 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j56-UNSTABLE

 *** CHANGE ***

 * Moved inline_imagewrap.inc from html_wrap to layout

 * Removed (!):
	html_wrap/inline_photo.header.default
	html_wrap/inline_photo.frame.default
	html_wrap/inline_photothumb.frame.default
	html_wrap/inline_photo.footer.default
	html_wrap/inline_albumthumb.header.default
	html_wrap/inline_moviethumb.frame.default
	html_wrap/inline_albumthumb.frame.default
	html_wrap/inline_albumthumb.footer.default
	
 * Adjustments in
	templates/gallery.tpl.default
	templates/album.tpl.default
	templates/photo.tpl.default (!)

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j55-UNSTABLE

 * css -> 1.6
	tools/find_orphans.php

YEEEEEEEHA ! The last one. alpha-1 is near

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j54-UNSTABLE

*** CHANGE ***
