@@ -1,3 +1,9 @@
+2006-06-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j62-UNSTABLE
+
+ * Use of true/false instead 0 / 1
+	view_photo_properties.php
+	classes/AlbumItem.php
+
 2006-06-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j61-UNSTABLE
 
  * Fix: init_language() is not called redundant in init.php
